Add some notes.

--- a/tex/p086.tex
+++ b/tex/p086.tex
@@ -46,7 +46,7 @@
 \vs p086 5:12 The ancients believed that souls could enter animals or even inanimate objects. This culminated in the werewolf ideas of animal identification. A person could be a law\hyp{}abiding citizen by day, but when he fell asleep, his soul could enter a wolf or some other animal to prowl about on nocturnal depredations.
 \vs p086 5:13 Primitive men thought that the soul was associated with the breath, and that its qualities could be imparted or transferred by the breath. The brave chief would breathe upon the newborn child, thereby imparting courage. Among early Christians the ceremony of bestowing the Holy Spirit was accompanied by breathing on the candidates. Said the Psalmist: “By the word of the Lord were the heavens made and all the host of them by the breath of his mouth.” It was long the custom of the eldest son to try to catch the last breath of his dying father.
 \vs p086 5:14 The shadow came, later on, to be feared and revered equally with the breath. The reflection of oneself in the water was also sometimes looked upon as proof of the double self, and mirrors were regarded with superstitious awe. Even now many civilized persons turn the mirror to the wall in the event of death. Some backward tribes still believe that the making of pictures, drawings, models, or images removes all or a part of the soul from the body; hence such are forbidden.
-\vs p086 5:15 The soul was generally thought of as being identified with the breath, but it was also located by various peoples in the head, hair, heart, liver, blood, and fat. The “crying out of Abel’s blood from the ground” is expressive of the onetime belief in the presence of the ghost in the blood. The Semites taught that the soul resided in the bodily fat, and among many the eating of animal fat was taboo. Head hunting was a method of capturing an enemy’s soul, as was scalping. In recent times the eyes have been regarded as the windows of the soul.
+\vs p086 5:15 The soul was generally thought of as being identified with the breath, but it was also located by various peoples in the head, hair, heart, liver, blood, and fat. The “crying out of Abel’s blood from the ground” is expressive of the onetime belief in the presence of the ghost in the blood. The Semites taught that the soul resided in the bodily fat, and among many the eating of animal fat was taboo. Head hunting was a method of capturing an enemy’s soul, as was scalping. In recent times the eyes have been regarded as the windows of the soul\fnst{\textbf{eyes \ldots\ the windows of the soul}, The Mighty Messenger at \bibref[42:12.12]{p042 12:12} says ``the material eyes are truly the windows of the spirit\hyp{}born soul''.}.
 \vs p086 5:16 Those who held the doctrine of three or four souls believed that the loss of one soul meant discomfort, two illness, three death. One soul lived in the breath, one in the head, one in the hair, one in the heart. The sick were advised to stroll about in the open air with the hope of recapturing their strayed souls. The greatest of the medicine men were supposed to exchange the sick soul of a diseased person for a new one, the “new birth.”
 \vs p086 5:17 The children of Badonan developed a belief in two souls, the breath and the shadow. The early Nodite races regarded man as consisting of two persons, soul and body. This philosophy of human existence was later reflected in the Greek viewpoint. The Greeks themselves believed in three souls; the vegetative resided in the stomach, the animal in the heart, the intellectual in the head. The Eskimos believe that man has three parts: body, soul, and name.\fnc{The children of \bibtextul{Badanon} developed a belief in two souls, \bibexpl{Badonan is the correct spelling; Badanon was, no doubt, the result of an inadvertent key transposition.}}
 \usection{6.\bibnobreakspace The Ghost\hyp{}Spirit Environment}
