--- a/tex/p088.tex
+++ b/tex/p088.tex
@@ -20,7 +20,7 @@
 \vs p088 2:4 \pc The earliest images were made to preserve the appearance and memory of the illustrious dead; they were really monuments. Idols were a refinement of fetishism. The primitives believed that a ceremony of consecration caused the spirit to enter the image; likewise, when certain objects were blessed, they became charms.
 \vs p088 2:5 Moses, in the addition of the second commandment to the ancient Dalamatian moral code, made an effort to control fetish worship among the Hebrews. He carefully directed that they should make no sort of image that might become consecrated as a fetish. He made it plain, “You shall not make a graven image or any likeness of anything that is in heaven above, or on the earth beneath, or in the waters of the earth.” While this commandment did much to retard art among the Jews, it did lessen fetish worship. But Moses was too wise to attempt suddenly to displace the olden fetishes, and he therefore consented to the putting of certain relics alongside the law in the combined war altar and religious shrine which was the ark.
 \vs p088 2:6 \pc Words eventually became fetishes, more especially those which were regarded as God’s words; in this way the sacred books of many religions have become fetishistic prisons incarcerating the spiritual imagination of man. Moses’ very effort against fetishes became a supreme fetish; his commandment was later used to stultify art and to retard the enjoyment and adoration of the beautiful.
-\vs p088 2:7 In olden times the fetish word of authority was a fear\hyp{}inspiring \bibemph{doctrine,} the most terrible of all tyrants which enslave men. A doctrinal fetish will lead mortal man to betray himself into the clutches of bigotry, fanaticism, superstition, intolerance, and the most atrocious of barbarous cruelties. Modern respect for wisdom and truth is but the recent escape from the fetish\hyp{}making tendency up to the higher levels of thinking and reasoning. Concerning the accumulated fetish writings which various religionists hold as \bibemph{sacred books,} it is not only believed that what is in the book is true, but also that every truth is contained in the book. If one of these sacred books happens to speak of the earth as being flat, then, for long generations, otherwise sane men and women will refuse to accept positive evidence that the planet is round.
+\vs p088 2:7 In olden times the fetish word of authority was a fear\hyp{}inspiring \bibemph{doctrine,} the most terrible of all tyrants which enslave men. A doctrinal fetish will lead mortal man to betray himself into the clutches of bigotry, fanaticism, superstition, intolerance, and the most atrocious of barbarous cruelties. Modern respect for wisdom and truth is but the recent escape from the fetish\hyp{}making tendency up to the higher levels of thinking and reasoning. Concerning the accumulated fetish writings which various religionists hold as \bibemph{sacred books,} it is not only believed that what is in the book is true, but also that every truth is contained in the book. If one of these sacred books happens to speak of the earth as being flat, then, for long generations, otherwise sane\fnst{\textbf{otherwise sane}, The great popularity in our days of the ``flat earth theories'', accepted by the masses of uneducated and superficially educated people is both sad and ominous.} men and women will refuse to accept positive evidence that the planet is round.
 \vs p088 2:8 The practice of opening one of these sacred books to let the eye chance upon a passage, the following of which may determine important life decisions or projects, is nothing more nor less than arrant fetishism. To take an oath on a “holy book” or to swear by some object of supreme veneration is a form of refined fetishism.
 \vs p088 2:9 But it does represent real evolutionary progress to advance from the fetish fear of a savage chief’s fingernail trimmings to the adoration of a superb collection of letters, laws, legends, allegories, myths, poems, and chronicles which, after all, reflect the winnowed moral wisdom of many centuries, at least up to the time and event of their being assembled as a “sacred book.”
 \vs p088 2:10 To become fetishes, words had to be considered inspired, and the invocation of supposed divinely inspired writings led directly to the establishment of the \bibemph{authority} of the church, while the evolution of civil forms led to the fruition of the \bibemph{authority} of the state.
