Remove two superfluous notes

--- a/tex/p093.tex
+++ b/tex/p093.tex
@@ -49,7 +49,7 @@
 \vs p093 5:5 A few weeks after the death of Abraham’s father, Terah, Melchizedek sent one of his students, Jaram the Hittite, to extend this invitation to both Abraham and Nahor: “Come to Salem, where you shall hear our teachings of the truth of the eternal Creator, and in the enlightened offspring of you two brothers shall all the world be blessed.” Now Nahor had not wholly accepted the Melchizedek gospel; he remained behind and built up a strong city\hyp{}state which bore his name; but Lot, Abraham’s nephew, decided to go with his uncle to Salem.
 \vs p093 5:6 Upon arriving at Salem, Abraham and Lot chose a hilly fastness near the city where they could defend themselves against the many surprise attacks of northern raiders. At this time the Hittites, Assyrians, Philistines, and other groups were constantly raiding the tribes of central and southern Palestine. From their stronghold in the hills Abraham and Lot made frequent pilgrimages to Salem.
 \vs p093 5:7 \pc Not long after they had established themselves near Salem, Abraham and Lot journeyed to the valley of the Nile to obtain food supplies as there was then a drought in Palestine. During his brief sojourn in Egypt Abraham found a distant relative on the Egyptian throne, and he served as the commander of two very successful military expeditions for this king. During the latter part of his sojourn on the Nile he and his wife, Sarah, lived at court, and when leaving Egypt, he was given a share of the spoils of his military campaigns.
-\vs p093 5:8 It required great determination for Abraham to forgo the honours of the Egyptian court and return to the more spiritual work sponsored by Machiventa. But Melchizedek was revered even in Egypt, and when the full story was laid before Pharaoh, he strongly urged Abraham to return to the execution of his vows to the cause of Salem.\fnc{It required great determination for Abraham to \bibtextul{forego} the honours\ldots{} \bibexpl{See note for \bibref[89:3.1]{p089 3:1}. above.}}
+\vs p093 5:8 It required great determination for Abraham to forgo the honours of the Egyptian court and return to the more spiritual work sponsored by Machiventa. But Melchizedek was revered even in Egypt, and when the full story was laid before Pharaoh, he strongly urged Abraham to return to the execution of his vows to the cause of Salem.
 \vs p093 5:9 \pc Abraham had kingly ambitions, and on the way back from Egypt he laid before Lot his plan to subdue all Canaan and bring its people under the rule of Salem. Lot was more bent on business; so, after a later disagreement, he went to Sodom to engage in trade and animal husbandry. Lot liked neither a military nor a herder’s life.
 \vs p093 5:10 Upon returning with his family to Salem, Abraham began to mature his military projects. He was soon recognized as the civil ruler of the Salem territory and had confederated under his leadership seven near\hyp{}by tribes. Indeed, it was with great difficulty that Melchizedek restrained Abraham, who was fired with a zeal to go forth and round up the neighbouring tribes with the sword that they might thus more quickly be brought to a knowledge of the Salem truths.
 \vs p093 5:11 Melchizedek maintained peaceful relations with all the surrounding tribes; he was not militaristic and was never attacked by any of the armies as they moved back and forth. He was entirely willing that Abraham should formulate a defensive policy for Salem such as was subsequently put into effect, but he would not approve of his pupil’s ambitious schemes for conquest; so there occurred a friendly severance of relationship, Abraham going over to Hebron to establish his military capital.
