--- a/tex/p177.tex
+++ b/tex/p177.tex
@@ -26,7 +26,7 @@
 \vs p177 3:4 David’s mother did as her son requested, and now the runners came back to David bringing the word that his mother and Jesus’ entire family were on the way to Jerusalem and should arrive sometime late on the following day or very early the next morning. Since David did this on his own initiative, he thought it wise to keep the matter to himself. He told no one, therefore, that Jesus’ family was on the way to Jerusalem.
 \vs p177 3:5 \pc Shortly after noon, more than 20 of the Greeks who had met with Jesus and the 12 at the home of Joseph of Arimathea arrived at the camp, and Peter and John spent several hours in conference with them. These Greeks, at least some of them, were well advanced in the knowledge of the kingdom, having been instructed by Rodan at Alexandria.
 \vs p177 3:6 That evening, after returning to the camp, Jesus visited with the Greeks, and had it not been that such a course would have greatly disturbed his apostles and many of his leading disciples, he would have ordained these 20 Greeks, even as he had the 70.
-\vs p177 3:7 \pc While all of this was going on at the camp, in Jerusalem the chief priests and elders were amazed that Jesus did not return to address the multitudes. True, the day before, when he left the temple, he had said, \textcolour{ubdarkred}{“I leave your house to you desolate.”} But they could not understand why he would be willing to forgo the great advantage which he had built up in the friendly attitude of the crowds. While they feared he would stir up a tumult among the people, the Master’s last words to the multitude had been an exhortation to conform in every reasonable manner with the authority of those “who sit in Moses’ seat.” But it was a busy day in the city as they simultaneously prepared for the Passover and perfected their plans for destroying Jesus.\fnc{\ldots{}why he would be willing to \bibtextul{forego} the great advantage\ldots{} \bibexpl{See note for \bibref[89:3.1]{p089 3:1}.}}
+\vs p177 3:7 \pc While all of this was going on at the camp, in Jerusalem the chief priests and elders were amazed that Jesus did not return to address the multitudes. True, the day before, when he left the temple, he had said, \textcolour{ubdarkred}{“I leave your house to you desolate.”} But they could not understand why he would be willing to forgo the great advantage which he had built up in the friendly attitude of the crowds. While they feared he would stir up a tumult among the people, the Master’s last words to the multitude had been an exhortation to conform in every reasonable manner with the authority of those “who sit in Moses’ seat.” But it was a busy day in the city as they simultaneously prepared for the Passover and perfected their plans for destroying Jesus.
 \vs p177 3:8 \pc Not many people came to the camp, for its establishment had been kept a well\hyp{}guarded secret by all who knew that Jesus was expecting to stay there in place of going out to Bethany every night.
 \usection{4.\bibnobreakspace Judas and the Chief Priests}
 \vs p177 4:1 Shortly after Jesus and John Mark left the camp, Judas Iscariot disappeared from among his brethren, not returning until late in the afternoon. This confused and discontented apostle, notwithstanding his Master’s specific request to refrain from entering Jerusalem, went in haste to keep his appointment with Jesus’ enemies at the home of Caiaphas the high priest. This was an informal meeting of the Sanhedrin and had been appointed for shortly after 10:00 that morning. This meeting was called to discuss the nature of the charges which should be lodged against Jesus and to decide upon the procedure to be employed in bringing him before the Roman authorities for the purpose of securing the necessary civil confirmation of the death sentence which they had already passed upon him.
