Enable printing the list of pictures

--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -15,7 +15,7 @@
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \tunemarkup{pgafour}{\include{tex/paper-titles}}
 \tunemarkup{pgcrownq}{\include{tex/paper-titles}}
-%\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
+\iftotalfigures\clp\listoffigures\clp\fi % XXX doesn't work: disturbs all the headings for unknown reason!
 \tunemarkup{introinclude}{\include{tex/intro}}
 \clp
 \ifvoli
