Add support for Kobo Aura One 8" eInk device

--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -29,6 +29,7 @@
 \upapertitle{15}{The Seven Superuniverses}{Universal Censor}{p15}
 \upapertitle{16}{The Seven Master Spirits}{Universal Censor}{p16}
 \upapertitle{17}{The Seven Supreme Spirit Groups}{Divine Counsellor}{p17}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{18}{The Supreme Trinity Personalities}{Divine Counsellor}{p18}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{19}{The Co-ordinate Trinity-Origin Beings}{Divine Counsellor}{p19}
@@ -51,6 +52,7 @@
 \upapertitle{32}{The Evolution of Local Universes}{Mighty Messenger}{p32}
 \upapertitle{33}{Administration of the Local Universe}{Chief of Archangels}{p33}
 \upapertitle{34}{The Local Universe Mother Spirit}{Mighty Messenger}{p34}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{35}{The Local Universe Sons of God}{Chief of Archangels}{p35}
 \upapertitle{36}{The Life Carriers}{Vorondadek Son}{p36}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
@@ -74,6 +76,7 @@
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{54}{Problems of the Lucifer Rebellion}{Mighty Messenger}{p54}
 \upapertitle{55}{The Spheres of Light and Life}{Mighty Messenger}{p55}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{56}{Universal Unity}{\parbox[t]{0.3\linewidth}{Mighty Messenger and Machiventa Melchizedek}}{p56}
 \upartheader{3}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
@@ -96,6 +99,7 @@
 \upapertitle{71}{Development of the State}{Melchizedek}{p71}
 \upapertitle{72}{Government on a Neighbouring Planet}{Melchizedek}{p72}
 \upapertitle{73}{The Garden of Eden}{Solonia}{p73}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{74}{Adam and Eve}{Solonia}{p74}
 \upapertitle{75}{The Default of Adam and Eve}{Solonia}{p75}
 \upapertitle{76}{The Second Garden}{Solonia}{p76}
@@ -119,6 +123,7 @@
 \upapertitle{92}{The Later Evolution of Religion}{Melchizedek}{p92}
 \upapertitle{93}{Machiventa Melchizedek}{Melchizedek}{p93}
 \upapertitle{94}{The Melchizedek Teachings in the Orient}{Melchizedek}{p94}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{95}{The Melchizedek Teachings in the Levant}{Melchizedek}{p95}
 \upapertitle{96}{Yahweh — God of the Hebrews}{Melchizedek}{p96}
 \fi
@@ -146,6 +151,7 @@
 \upapertitle{113}{Seraphic Guardians of Destiny}{Chief of Seraphim}{p113}
 \upapertitle{114}{Seraphic Planetary Government}{Chief of Seraphim}{p114}
 \upapertitle{115}{The Supreme Being}{Mighty Messenger}{p115}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{116}{The Almighty Supreme}{Mighty Messenger}{p116}
 \upapertitle{117}{God the Supreme}{Mighty Messenger}{p117}
 \upapertitle{118}{Supreme and Ultimate — Time and Space}{Mighty Messenger}{p118}
@@ -168,6 +174,7 @@
 \upapertitle{131}{The World’s Religions}{Midwayer Commission}{p131}
 \upapertitle{132}{The Sojourn at Rome}{Midwayer Commission}{p132}
 \upapertitle{133}{The Return from Rome}{Midwayer Commission}{p133}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{134}{The Transition Years}{Midwayer Commission}{p134}
 \upapertitle{135}{John the Baptist}{Midwayer Commission}{p135}
 \upapertitle{136}{Baptism and the Forty Days}{Midwayer Commission}{p136}
@@ -191,6 +198,7 @@
 \upapertitle{152}{Events Leading up to the Capernaum Crisis}{Midwayer Commission}{p152}
 \upapertitle{153}{The Crisis at Capernaum}{Midwayer Commission}{p153}
 \upapertitle{154}{Last Days at Capernaum}{Midwayer Commission}{p154}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{155}{Fleeing Through Northern Galilee}{Midwayer Commission}{p155}
 \upapertitle{156}{The Sojourn at Tyre and Sidon}{Midwayer Commission}{p156}
 \upapertitle{157}{At Caesarea-Philippi}{Midwayer Commission}{p157}
@@ -216,6 +224,7 @@
 \upapertitle{173}{Monday in Jerusalem}{Midwayer Commission}{p173}
 \upapertitle{174}{Tuesday Morning in the Temple}{Midwayer Commission}{p174}
 \upapertitle{175}{The Last Temple Discourse}{Midwayer Commission}{p175}
+\tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{176}{Tuesday Evening on Mount Olivet}{Midwayer Commission}{p176}
 \upapertitle{177}{Wednesday, the Rest Day}{Midwayer Commission}{p177}
 \upapertitle{178}{Last Day at the Camp}{Midwayer Commission}{p178}
