--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -11,6 +11,7 @@
 \tunemarkup{pghanlin}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgnexus7}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
+\tunemarkup{pgauraone}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\include{tex/paper-titles}}
 \tunemarkup{pgkobomini}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
 \tunemarkup{pgafour}{\include{tex/paper-titles}}
