Adjust the font size

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -8,7 +8,7 @@
 \makeatother
 
 \begin{center}
-\Large\tunemarkup{pgafour}{\huge}\bfseries
+\Large\tunemarkup{pgafour}{\huge}\tunemarkup{pgauraone}{\LARGE}\bfseries
 INTRODUCTION
 \end{center}
 
