Redefine the circle in a more portable manner The old good \r{} didn't work on Android version of TeX Live

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -86,6 +86,8 @@
 \RequirePackage{amsmath,amsfonts,amssymb}
 \renewcommand{\vec}[1]{\boldsymbol{#1}}
 
+\renewcommand{\r}{\kern2pt\raisebox{1.5ex}{\circle{2}}}
+
 \tunemarkup{garamond}{%
 \def\urantiamainfont{Garamond Premier Pro}
 %\def\urantiaparttitlefont{Garamond Premier Pro Semibold Display}
