Add a note suggested by Konstantin

--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -46,7 +46,7 @@
 \vs p134 5:7 As sovereignty passes from smaller groups to larger groups, wars are lessened. That is, minor wars between smaller nations are lessened, but the potential for greater wars is increased as the nations wielding sovereignty become larger and larger. Presently, when all the world has been explored and occupied, when nations are few, strong, and powerful, when these great and supposedly sovereign nations come to touch borders, when only oceans separate them, then will the stage be set for major wars, world\hyp{}wide conflicts. So\hyp{}called sovereign nations cannot rub elbows without generating conflicts and eventuating wars.
 \vs p134 5:8 The difficulty in the evolution of political sovereignty from the family to all mankind, lies in the inertia\hyp{}resistance exhibited on all intervening levels. Families have, on occasion, defied their clan, while clans and tribes have often been subversive of the sovereignty of the territorial state. Each new and forward evolution of political sovereignty is (and has always been) embarrassed and hampered by the “scaffolding stages” of the previous developments in political organization. And this is true because human loyalties, once mobilized, are hard to change. The same loyalty which makes possible the evolution of the tribe, makes difficult the evolution of the supertribe --- the territorial state. And the same loyalty (patriotism) which makes possible the evolution of the territorial state, vastly complicates the evolutionary development of the government of all mankind.
 \vs p134 5:9 Political sovereignty is created out of the surrender of self\hyp{}determinism, first by the individual within the family and then by the families and clans in relation to the tribe and larger groupings. This progressive transfer of self\hyp{}determination from the smaller to ever larger political organizations has generally proceeded unabated in the East since the establishment of the Ming and the Mogul dynasties. In the West it obtained for more than 1,000 years right on down to the end of the World War, when an unfortunate retrograde movement temporarily reversed this normal trend by re\hyp{}establishing the submerged political sovereignty of numerous small groups in Europe.
-\vs p134 5:10 Urantia will not enjoy lasting peace until the so\hyp{}called sovereign nations intelligently and fully surrender their sovereign powers into the hands of the brotherhood of men --- mankind government. Internationalism --- Leagues of Nations --- can never bring permanent peace to mankind. World\hyp{}wide confederations of nations will effectively prevent minor wars and acceptably control the smaller nations, but they will not prevent world wars nor control the three, four, or five most powerful governments. In the face of real conflicts, one of these world powers will withdraw from the League and declare war. You cannot prevent nations going to war as long as they remain infected with the delusional virus of national sovereignty. Internationalism is a step in the right direction. An international police force will prevent many minor wars, but it will not be effective in preventing major wars, conflicts between the great military governments of earth.
+\vs p134 5:10 Urantia will not enjoy lasting peace until the so\hyp{}called sovereign nations intelligently and fully surrender their sovereign powers into the hands of the brotherhood of men --- mankind government. Internationalism --- Leagues of Nations --- can never bring permanent peace to mankind. World\hyp{}wide confederations of nations will effectively prevent minor wars and acceptably control the smaller nations, but they will not prevent world wars nor control the three, four, or five most powerful governments. In the face of real conflicts, one of these world powers will withdraw from the League and declare war\fnst{\textbf{one of these world powers will withdraw from the League and declare war}, In 1933 Germany withdrew from the League of Nations and in 1939 the World War II began.}. You cannot prevent nations going to war as long as they remain infected with the delusional virus of national sovereignty. Internationalism is a step in the right direction. An international police force will prevent many minor wars, but it will not be effective in preventing major wars, conflicts between the great military governments of earth.
 \vs p134 5:11 As the number of truly sovereign nations (great powers) decreases, so do both opportunity and need for mankind government increase. When there are only a few really sovereign (great) powers, either they must embark on the life and death struggle for national (imperial) supremacy, or else, by voluntary surrender of certain prerogatives of sovereignty, they must create the essential nucleus of supernational power which will serve as the beginning of the real sovereignty of all mankind.
 \vs p134 5:12 \pc Peace will not come to Urantia until every so\hyp{}called sovereign nation surrenders its power to make war into the hands of a representative government of all mankind. Political sovereignty is innate with the peoples of the world. When all the peoples of Urantia create a world government, they have the right and the power to make such a government SOVEREIGN; and when such a representative or democratic world power controls the world’s land, air, and naval forces, peace on earth and good will among men can prevail --- but not until then.
 \vs p134 5:13 To use an important XIX and XX century illustration: The 48 states of the American Federal Union have long enjoyed peace. They have no more wars among themselves. They have surrendered their sovereignty to the federal government, and through the arbitrament of war, they have abandoned all claims to the delusions of self\hyp{}determination. While each state regulates its internal affairs, it is not concerned with foreign relations, tariffs, immigration, military affairs, or interstate commerce. Neither do the individual states concern themselves with matters of citizenship. The 48 states suffer the ravages of war only when the federal government’s sovereignty is in some way jeopardized.
